	along with some nearby cruft.
	* doc/autoconf.texi (Libtool): Libtool can be used without
	Automake (not without Autoconf).
	(Introduction): Mention lists.gnu.org.
	* BUGS: Don't mention bugs.gnu.org.
	Remove mention of ancient libtool compatibility problem.
	* NEWS: Mention that bugs.gnu.org is kaput.
	* README: Likewise.  Mention where mailing list archives can be found.

2004-11-26  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Pretty Help Strings): Go back to
	single-quoting assignments to cache variables.

2004-11-23  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Pretty Help Strings): Fix quoting issues
	with the examples; fix the bug in MY_ARG_WITH example reported
	by Alexandre Duret-Lutz.
	* lib/autoconf/general.m4 (AC_ARG_ENABLE, AC_ARG_ENABLE): Enable
	expansion of $1 in the comment emitted to configure.

2004-11-23  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Pretty Help Strings): Fix typo
	in my editing of the previous patch.  Problem reported
	by Alexandre Duret-Lutz.

2004-11-22  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Autoconf Language): Explain that
	``descriptions'' may not be double quotes.
	(Quotation Rule Of Thumb): Likewise.
	(Pretty Help Strings): Likewise; remove the wrong comment;
	simplify the examples and improve their quoting.

2004-11-13  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/programs.m4 (_AC_FEATURE_CHECK_LENGTH): Don't check
	the $1_found variable, don't test whether the file is executable;
	Both things are checked ...
	(_AC_PATH_PROG_FEATURE_CHECK): ... here; AS_EXECUTABLE_P replaces
	the former ``test -f''.
	* lib/m4sugar/m4sh.m4 (_AS_TEST_PREPARE): Fix a typo.

2004-11-10  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Limitations of Usual Tools): Avoid cp -r;
	use cp -R instead.

2004-11-10  Derek R. Price  <derek@ximbiot.com>

	* doc/autoconf.texi (Limitations of Usual Tools): Note `cp -r'
	limitations.  Reorder paragraphs for clarity.
